added line no 81

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -78,6 +78,7 @@ div#wormhole img {
   height: 320px;
   width: 320px;
   transform: scale(0, 0);
+  opacity: 0.9;
 }
 
 a#skip {
@@ -144,7 +145,6 @@ a#skip {
 @keyframes growing {
   from {
     transform: rotate(0deg);
-
     opacity: 0;
   }
   to {
