--- a/stylesheets/dev.css
+++ b/stylesheets/dev.css
@@ -4,26 +4,10 @@ div#wrapper {
   left: 0px;
 
   position: absolute;
-  background: #f9f7f7;
+  background: white;
   display: flex;
   flex-direction: row;
   align-content: stretch;
-}
-
-div#theme {
-  position: fixed;
-  display: grid;
-  background: white;
-  left: 27%;
-  width: 70px;
-  height: 30px;
-  border-radius: 100%;
-  border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px;
-  grid-template-rows: 10% 90%;
-  grid-template-columns: 20% 80%;
-  top: 5px;
-  border: 1px solid lightgray;
 }
 
 div#panel {
@@ -50,41 +34,40 @@ div#content p#heading {
 div#box {
   text-align: left;
   display: inline-block;
-  border: 1px solid lightgray;
+  border: 1px solid #af7faf22;
   padding: 5px;
+  border-radius:5px;
   background: #ffffff;
-  margin: 5px;
-  width: 270px;
+  margin: 10px;
+  width: 260px;
+  text-align:center;
 }
 
 div#box p#heading {
   font-size: 16px;
-  text-align: center;
 }
 
 div#box p#heading:before {
   content: "> ";
-  color: gray;
+  color: #af7fafab;
 }
+
 
 div#box p#heading:after {
   content: " <";
-  color: gray;
+  color: #af7fafab;
 }
+
 
 div#box p#disc {
   font-size: 14px;
   color: dimgray;
 }
 
-div#box a:visited {
-  color: black;
-  text-shadow: 0px 0px 1px #ff00ff;
-}
 
-div#box a:link {
-  color: black;
-  text-shadow: 0px 0px 1px #ff00ff;
+div#box a:visited,div#box a:link {
+    color: #0086B3;
+  text-decoration:none;
 }
 
 div#circle {
@@ -92,7 +75,7 @@ div#circle {
   display: inline-block;
   box-shadow: 0px 0px 5px #af7faf;
   border-radius: 50%;
-  padding: 20px;
+  padding: 25px;
   margin: 10px;
   background: #ffffff;
 }
