--- a/stylesheets/dev.css
+++ b/stylesheets/dev.css
@@ -151,3 +151,14 @@ hr {
 div#links img:hover {
   opacity: 0.8;
 }
+@media only screen and (max-width: 1000px) {
+  div#wrapper {
+    display: block;
+  }
+  div#panel,
+  div#content {
+    width: 100%;
+    min-height: 0;
+  }
+}
+
