--- a/stylesheets/dev.css
+++ b/stylesheets/dev.css
@@ -20,6 +20,10 @@ div#panel {
   box-shadow: 0px 0px 5px #af7faf;
 }
 
+a {
+  text-decoration: none;
+}
+
 img#pp {
   width: 150px;
   height: 150px;
@@ -77,7 +81,6 @@ div#box p#disc {
 div#box a:visited,
 div#box a:link {
   color: #0086b3;
-  text-decoration: none;
 }
 
 div#circle {
@@ -139,7 +142,9 @@ table a:visited {
 table a:link {
   color: blue;
 }
-
+table a:hover {
+  text-decoration: underline;
+}
 th img {
   width: 25px;
 }
@@ -196,6 +201,7 @@ font#tagline {
   table#proj_header p#heading {
     font-size: 72px;
   }
+
   font#tagline {
     font-size: 24px;
   }
@@ -240,4 +246,8 @@ font#tagline {
   div#box img {
     width: 300px;
   }
+}
+
+div#links table {
+  margin-top: 5%;
 }
