--- a/stylesheets/dev.css
+++ b/stylesheets/dev.css
@@ -180,16 +180,16 @@ font#tagline {
     min-height: 0;
   }
   img#pp {
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
   }
   div#self {
     margin-left: 10%;
     margin-right: 10%;
-    font-size: xxx-large;
+    font-size: xx-large;
   }
   div#self h1 {
-    font-size: 96px;
+    font-size: 84px;
   }
   div#links td {
     font-size: 36px;
@@ -199,11 +199,11 @@ font#tagline {
   }
 
   table#proj_header p#heading {
-    font-size: 96px;
+    font-size: 72px;
   }
 
   font#tagline {
-    font-size: 48px;
+    font-size: 24px;
   }
 
   div#skills img {
@@ -218,10 +218,6 @@ font#tagline {
   div#circle {
     padding: 50px;
     margin: 20px;
-  }
-
-  div#circle img {
-    width: 100px;
   }
 
   div#truck {
@@ -240,11 +236,11 @@ font#tagline {
   }
 
   div#box p#heading {
-    font-size: 72px;
+    font-size: 36px;
   }
 
   div#box p#disc {
-    font-size: 48px;
+    font-size: 24px;
   }
 
   div#box img {
