--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -331,6 +331,52 @@ div.background table.edu td#date {
 }
 
 
+
+::-webkit-scrollbar{
+  width:0
+}
+
+div#scrollPath {
+  position: fixed;
+  top:0;
+  right:0;
+  width:5px;
+  height:100%;
+  background: rgba(0,0,0,0.05);
+}
+
+div#progressBar {
+  position: fixed;
+  top:0;
+  right:0;
+  width:5px;
+  height:100%;
+  background: linear-gradient(to top, #008aff, #00ffe7);
+  animation: animate-scroll 5s linear infinite;
+}
+
+@keyframes animate-scroll {
+  0%,100% {
+    filter:hue-rotate(0deg)
+  }  
+  50% {
+    filter:hue-rotate(360deg)
+  }
+}
+
+
+#progressBar:before {
+  content:'';
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: linear-gradient(to top, #008aff, #00ffe7);
+  filter: blur(10px);
+}
+
+
 @media only screen and (max-width: 1000px) {
   div#wrapper{
     display: flex;
