--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -86,7 +86,7 @@ div#wrapper {
 div#panel {
   background: black;
   height: calc(100vh - 20px);
-  width: 25%;
+  width: 25vw;
   padding: 10px;
   box-shadow: 0px 0px 1px #454545;
   z-index:10;
@@ -105,17 +105,12 @@ a {
 img#pp {
   width: 150px;
   height: 150px;
-  box-shadow: 0px 0px 5px orangered;
   border-radius: 50%;
 }
 
-img#pp:hover {
-  transform: scale(1.02);
-  box-shadow: 0px 0px 10px orangered;
-}
 
 div#content {
-  margin-left: calc(25% + 10px);
+  margin-left: calc(25vw + 10px);
   padding: 2%;
   padding-bottom: 0px;
 }
@@ -260,7 +255,7 @@ th img {
 }
 
 div#content {
-  width: 75%;
+  width: 75vw;
 }
 
 hr {
